# NSU_DB

./: .gitignore  README.md  TASK.md
client/: BUILD_APP.bat  CMakeLists.txt
client/app/: CMakeLists.txt
client/app/src/: Application.cpp  Application.hpp  Database.cpp  Database.hpp  Logger.hpp  main.cpp  pch.hpp
database/: docker-compose.yml
database/data/: branches.csv  clients.csv  deliveries.csv  delivery_items.csv  film_development_orders.csv  films.csv  firms.csv  frames.csv  items.csv  kiosks.csv  orders.csv  outlet_types.csv  outlets.csv  paper_sizes.csv  paper_types.csv  photo_stores.csv  print_discounts.csv  print_orders.csv  print_prices.csv  service_orders.csv  service_types.csv  service_types_needed_items.csv  service_types_outlets.csv  storage_items.csv  storages.csv  vendor_items.csv  vendors.csv
database/sql_queries/: 1.sql  10.sql  11.sql  12.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
database/sql_scripts/: 01-create-roles.sql  02-create-db.sql  03-create-tables.sql  04-init-roles.sql  05-create-triggers.sql  06-fill-tables.sql
report/: nsu_photocenter_db_final.docx
